deploy-ut-mongo.yaml
apiVersion: apps/v1
kind: Deployment
  replicas: 1
spec:
  name: ut-mongodb-deploy # random name
    matchLabels:
  labels:
    app: mongodb # random name
metadata:
      app: mongodb
    spec:
    labels:
  metadata:
  template:
  selector:
      app: mongodb
      containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
