deploy-back.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-back
  namespace: user-tracker
  labels:
    app: ut-back
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ut-back
  template:
    metadata:
      labels:
        app: ut-back
    spec:
      containers:
        - name: ut-back
          image: 192.168.77.150:8044/library/ut-back:latest
          ports:
            - containerPort: 6075
---
apiVersion: v1
kind: Service
metadata:
  name: service-back
  namespace: user-tracker
spec:
  selector:
    app: ut-back
  ports:
    - protocol: TCP
      port: 6075
      targetPort: 6075
