deploy-ut-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ut-mongodb-deploy # random name
  labels:
    app: mongodb # random name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: ut-mongodb-service # random name
spec:
  selector:
    app: mongodb # selector from actual pod labels => app
  ports:
    - protocol: TCP
      port: 27017 # service port
      targetPort: 27017 # containerPort from pod
